--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -24,7 +24,7 @@
                         <li class="icon_li" role="presentation"><a class="menu icon_li" role="menuitem" tabindex="-1" routerLink="/masters/customer">Customer</a></li>
                         <li class="icon_li" role="presentation"><a class="menu icon_li" role="menuitem" *ngIf="location" tabindex="-1" routerLink="/masters/location">Location</a></li>
                         <li class="icon_li" role="presentation"><a class="menu icon_li" role="menuitem" tabindex="-1" routerLink="/masters/geofencing">Geofence</a></li>
-                        <li class="icon_li" role="presentation"><a class="menu icon_li" rol++e="menuitem" *ngIf="shipmentlog" tabindex="-1" routerLink="/masters/shipment">Shipment</a></li>
+                        <li class="icon_li" role="presentation"><a class="menu icon_li" role="menuitem" *ngIf="shipmentlog" tabindex="-1" routerLink="/masters/shipment">Shipment</a></li>
                     </ul>
                 </div>
             </li>
