--- a/src/app/account/login.component.html
+++ b/src/app/account/login.component.html
@@ -43,31 +43,24 @@
            </div>
         </div>
         <div class="col-md-4 login-sec">
-            <h1 style="margin-left: 20%; margin-top: 10%;">
-                Login
-            </h1>
-          <img src="assets/img/ajax-logo.png" width="200" style="display: block; margin: auto;
-          margin-top: 13%; margin-bottom: 13%;" />
+            <h1 style="margin-left: 20%; margin-top: 10%;">Login</h1>
+          <img src="assets/img/ajax-logo.png" width="200" style="display: block; margin: auto; margin-top: 13%; margin-bottom: 13%;" />
           <div class="login-form">
             <form class="form-group" [formGroup]="form" (ngSubmit)="onSubmit()">
               <div>
                 <label for="loginName" style="margin-left: 20%; margin-bottom: 0px;" >Username</label>
-                <input type="text" type="text" formControlName="loginName" class="form-control"
-                  style="width:60%;margin-left: 20%; margin-bottom: 5%;">
+                <input type="text" type="text" formControlName="loginName" class="form-control" style="width:60%;margin-left: 20%; margin-bottom: 5%;">
                   <div *ngIf="submitted && f.loginName.errors" class="invalid-feedback">
                     <div *ngIf="f.loginName.errors.required">Username is required</div>
                 </div>
               </div>
               <div class="form-group">
                 <label for="password" style="margin-left: 20%; margin-bottom: 0px;" >Password</label>
-                <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
-                style="width:60%;margin-left: 20%;">
+                <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" style="width:60%;margin-left: 20%;">
                 <div *ngIf="submitted && f.password.errors" class="invalid-feedback" style = "text-align: center;" >
                     <div *ngIf="f.password.errors.required">Password is required</div>
                 </div>
-                
               </div>
-    
               <!-- <div class="form-check">
               <label class="form-check-label">
                 <input type="checkbox" class="form-check-input">
@@ -76,22 +69,16 @@
               <button [disabled]="loading" type="submit" class="btn btn-primary float-right">Submit</button>
             </div> -->
               <div class="form-group">
-                  <div>
-                <button [disabled] ='loading' id='loginButton' class="btn btn-primary" style="padding: 4px 45px; display: block; margin:auto; margin-top: 15%;margin-bottom: 7%; background-color: #3C84F0;"
-                (mouseover) = "mouseover()" (mouseout) = "mouseout()">
-                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span> 
-                 LOGIN</button>
-            
+                <div>
+                  <button [disabled] ='loading' id='loginButton' class="btn btn-primary" style="padding: 4px 45px; display: block; margin:auto; margin-top: 15%;margin-bottom: 7%; background-color: #3C84F0;" (mouseover) = "mouseover()" (mouseout) = "mouseout()">
+                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>LOGIN
+                  </button>
             </div> 
-
             <div style = "text-align: center;">
                 <span class="forgot-password"> <a>Forgot Password ? </a></span>
             </div>
-    
               </div>
             </form>
-    
-          
         </div>
         </div>
       </div>
