--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -25,6 +25,7 @@
                         <li class="icon_li" role="presentation"><a class="menu icon_li" role="menuitem" *ngIf="location" tabindex="-1" routerLink="/masters/location">Location</a></li>
                         <li class="icon_li" role="presentation"><a class="menu icon_li" role="menuitem" tabindex="-1" routerLink="/masters/geofencing">Geofence</a></li>
                         <li class="icon_li" role="presentation"><a class="menu icon_li" role="menuitem" *ngIf="shipmentlog" tabindex="-1" routerLink="/masters/shipment">Shipment</a></li>
+                        <li class="icon_li" role="presentation"><a class="menu icon_li" role="menuitem" *ngIf="service" tabindex="-1" routerLink="/masters/service">Service</a></li>
                     </ul>
                 </div>
             </li>
@@ -52,10 +53,15 @@
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="imageDropdown3" style="background-color: #454397; border: 0px; outline: 0px;">
                         <li role="presentation" style="margin-top: 0px; margin-right: 100px;"><a class="menu" role="menuitem" *ngIf="report" routerLink="report">Vehicle</a></li>
+                        <li role="presentation" style="margin-top: 0px; margin-right: 100px;"><a class="menu" role="menuitem" *ngIf="servicereport" routerLink="serviceReport">Service Report</a></li>
+                        <li role="presentation" style="margin-top: 0px; margin-right: 100px;"><a class="menu" role="menuitem" *ngIf="servicereport" routerLink="serviceReport">Utilization</a></li>
+                        <li role="presentation" style="margin-top: 0px; margin-right: 100px;"><a class="menu" role="menuitem" *ngIf="servicereport" routerLink="serviceReport">Subscription</a></li>
+                        <li role="presentation" style="margin-top: 0px; margin-right: 100px;"><a class="menu" role="menuitem" *ngIf="servicereport" routerLink="serviceReport">Non IOT</a></li>
                         <li role="presentation"><a class="menu" role="menuitem" *ngIf="testing" routerLink="testing/test">QA Testing</a></li>
+                        <li role="presentation" style="margin-top: 0px; margin-right: 100px;"><a class="menu" role="menuitem" *ngIf="servicereport" routerLink="serviceReport">Machine</a></li>
                     </ul>
                 </div>
-            </li>
+            </li> 
             <li class="nav-item">
                 <div class="dropdown">
                     <a class="nav-item nav-link" href="#" id="imageDropdown3" data-toggle="dropdown">
